# financial_advisor_agent

./: .env.example  .gitignore  1-agent.py  Readme.md  app.py  pyproject.toml  requirements.txt
app/: __main__.py  agent.py  main.py  prompt.py  tools.py
app/pages/: 01_About_This_Agent.py
notebooks/: api_smoke_test.ipynb
pages/: 01_About_This_Agent.py
